--- a/directnet_site/pages/main.html
+++ b/directnet_site/pages/main.html
@@ -1,6 +1,7 @@
 DirectNet is a serverless instant messaging system.  Rather than every user connecting to a central
-server, all users connect to each other, and all messages are sent amongst this network.  It's not
-yet in a functional state, but it's rapidly approacing it.<br>
+server, all users connect to each other, and all messages are sent amongst this network.  There is
+now a semi-functional release of it, but don't expect to be blown away by it's amazing power ...
+yet ;)<br>
 <br>
 <a href="?p=sf">Click here to go to the DirectNet project page on SourceForge.</a><br>
 <br>
