Keep CVS up to date...
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@46 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet_site/menu.html
+++ b/directnet_site/menu.html
@@ -1,5 +1,6 @@
 <center>
     <h2><font color=black>&nbsp;&nbsp;&nbsp;Menu&nbsp;&nbsp;&nbsp;</font></h2>
     <a href="?p=main"><font color=blue>Main</font></a><br>
+    <a href="?p=download"><font color=blue>Downloads</font></a><br>
     <a href="?p=sf"><font color=blue>SourceForge Page</font></a><br>
 </center>
