*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/directnet/code/trunk@215 40aaf297-f90e-0410-8da6-8adc2782f1e2

--- a/directnet_site/menu.html
+++ b/directnet_site/menu.html
@@ -1,7 +1,8 @@
 <center>
     <h2><font color=black>&nbsp;&nbsp;&nbsp;Menu&nbsp;&nbsp;&nbsp;</font></h2>
     <a href="?p=main"><font color=blue>Main</font></a><hr>
-    <a href="?p=download-b"><font color=blue>Download Binary</font</a><hr>
+    <a href="?p=readme"><font color=blue>Readme</font></a><hr>
+    <a href="?p=download-b"><font color=blue>Download Binary</font></a><hr>
     <a href="?p=download-s"><font color=blue>Download Source</font></a><hr>
     <a href="?p=sf"><font color=blue>SourceForge Page</font></a><br>
 </center>
